--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
+# Bounding Box Dataset
+dataset/original/
+dataset/split/train/
+dataset/split/test/
+dataset/split/val/
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
