--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,9 @@ dataset/original/
 dataset/split/train/
 dataset/split/test/
 dataset/split/val/
+dataset/split/train.cache
+dataset/split/test.cache
+dataset/split/val.cache
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
